# CUSTOMER_BEHAVIOR_ANALYSIS

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
CUSTOMER_SHOPPING_BEHAVE_ANALYSIS/: __init__.py  dataset.py  features.py  plots.py
CUSTOMER_SHOPPING_BEHAVE_ANALYSIS/modeling/: predict.py  train.py
dashboard/: CUSTOMER_SHOPPING _BEHAVIOR_DASHBOARD.pbix
data/raw/: DATASET.ipynb
docs/: mkdocs.yml
docs/docs/: index.md
